<resources>
    <string name="app_name">My Favorite Movie</string>
    <string name="delete_movie">delete movie</string>
    <string name="move_to_favorite_movie">move to favorite movie</string>
    <string name="add_to_favorite_movie">add to favorite movie</string>
    <string name="empty_description">empty description</string>
    <string name="favourite_movies">favourite movies</string>
    <string name="need_to_watch_movies">need to watch movies</string>
    <string name="search_movie">search movie</string>
    <string name="upcoming_title">Coming Next Week</string>
    <string name="add_to_need_to_watch_movie">add to need to watch</string>
    <string name="upcoming_movie">coming next week</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="exit">exit</string>
</resources>

