<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.example.myfavoritemovie.domain.entity.WatchStatus" />

        <variable
            name="movie"
            type="com.example.myfavoritemovie.domain.entity.Movie" />

        <variable
            name="viewModel"
            type="com.example.myfavoritemovie.ui.movies.dialog.MovieDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <View
            android:id="@+id/line_left"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:alpha="0.2"
            android:background="?colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/text_separator"
            app:layout_constraintEnd_toStartOf="@id/text_separator"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_separator" />

        <TextView
            android:id="@+id/text_separator"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.4"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/select_poster"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/line_right"
            app:layout_constraintStart_toEndOf="@id/line_left"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_right"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.2"
            android:background="?colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@id/text_separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_separator"
            app:layout_constraintTop_toTopOf="@id/text_separator" />

        <TextView
            android:id="@+id/text_original_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{movie.originalName}"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/card_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Original Name of Movie" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:insetLeft="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_original_name">

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:contentDescription="@string/empty_description"
                android:scaleType="centerCrop"
                app:srcCompat="@{movie.poster}" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:alpha="0.4"
            android:fontFamily="sans-serif-light"
            android:text="@{String.valueOf(movie.releaseYear)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button_move_to_favorite_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_poster"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="2020" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_move_to_favorite_movie"
            style="@style/Widget.MyFavoriteMovie.Button.TextButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.moveToFavoriteMovies(movie)}"
            android:text="@string/move_to_favorite_movie"
            android:textAlignment="center"
            android:visibility="@{movie.watchStatus == WatchStatus.NOT_WATCHED ? View.VISIBLE : View.GONE}"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@id/button_delete_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_year" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete_movie"
            style="@style/Widget.MyFavoriteMovie.Button.TextButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.deleteMovie(movie)}"
            android:text="@string/delete_movie"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_move_to_favorite_movie"
            app:layout_goneMarginTop="16dp"
            app:rippleColor="@color/mtrl_btn_text_btn_ripple_color" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_line_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="text_separator,line_left,line_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>